--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -17,6 +17,7 @@
   </view>
   <!-- 绑定事件  点击  -->
   <view bindtap="tapName">TapTap</view>
-  <!-- 微信api--->网络请求 按钮 -->
-  <button bindtap="testNetwork">网络请求测试</button>
+   <!-- 微信api---网络请求 按钮  -->
+  <button bindtap="testNetwork">网络请求测试,Test Network</button>
+  <button bindtap="testStorage">测试缓存, Test Storage</button>
 </view>
