--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -10,11 +10,15 @@
   <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
   </view>
+  <view>{{ name }}</view>
   <view>{{ message }}</view>
   <!-- 列表渲染   for循环 -->
   <view wx:for="{{array}}">
   No.{{index}} item, message: {{item.message}}
   </view>
+  <!-- <view wx:for="{{array}}">
+  No.{{index}} item, name: {{ item.name}}
+  </view> -->
   <!-- 绑定事件  点击  -->
   <view bindtap="tapName">TapTap</view>
    <!-- 微信api---网络请求 按钮  -->
