--- a/pages/demogird/demogird.wxml
+++ b/pages/demogird/demogird.wxml
@@ -3,17 +3,18 @@
 <view class="page">
     <view class="page__hd">
         <view class="page__title">Grid</view>
-        <view class="page__desc">九宫格</view>
+        <view class="page__desc">计算机专业基础知识</view>
     </view>
     <view class="page__bd">
         <view class="weui-grids">
             <!-- 列表渲染 -->
             <block wx:for="{{grids}}" wx:key="*this">
-                <navigator url="" class="weui-grid" hover-class="weui-grid_active">
+                <navigator url="http://www.baidu.com" class="weui-grid" hover-class="weui-grid_active">
                     <image class="weui-grid__icon" src="../images/icon_tabbar.png" />
-                    <view class="weui-grid__label">九宫格 {{ index }}</view>
+                    <view class="weui-grid__label"> {{item}}</view>
                 </navigator>
             </block>
         </view>
     </view>
+
 </view>
